Kubernetes/node_affinity.yml
example of how to apply node affinity and pod affinity in a Kubernetes deployment.
# Node Affinity Configuration

apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-affinity-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: node-affinity-pod
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: key-naru@123
                operator: In
                values:
                - value-naru
      containers:
      - name: nginx
        image: nginx

# In this example, we are creating a Deployment with a node affinity rule.
# It specifies that Pods should be scheduled on nodes with a label example-key=example-value.
