Kubernetes/pod_affinity.yml
# Pod Affinity Configuration

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-affinity-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: pod-affinity-pod
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - pod-affinity-pod
            topologyKey: kubernetes.io/hostname
      containers:
      - name: nginx
        image: nginx

# In this example, we are creating a Deployment with a pod affinity rule. 
# It specifies that Pods with the label 'app=pod-affinity-pod' should be co-located on nodes with the same 'kubernetes.io/hostname'
