Kubernetes/secrets.yml
# example of how to create and use a Kubernetes Secret 

# 1. Create a Kubernetes Secret YAML:

apiVersion: v1
kind: Secret
metadata:
  name: my-secret
type: Opaque
data:
  username: YWRtaW4=  # Base64-encoded username
  password: MWYyZDFlMmU2N2Rm
  
----

# 2. Use the Secret in a Pod:
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: my-container
    image: my-image
